# rime-utils

./: .gitignore  README.md  pyproject.toml
cn_dicts_wx/: chars.dict.yaml  compatible.dict.yaml  corrections.dict.yaml  division.dict.yaml
cn_dicts_wx_8105/: associational.dict.yaml  chars.dict.yaml  compatible.dict.yaml  corrections.dict.yaml  division.dict.yaml
cn_dicts_wx_zrm_18030/: chars.dict.yaml  compatible.dict.yaml  corrections.dict.yaml  division.dict.yaml  people.dict.yaml
cn_dicts_wx_zrm_8105/: compatible.dict.yaml  corrections.dict.yaml  division.dict.yaml  people.dict.yaml
draft/: wb86zi.draft.txt  wb86zi.txt
en_dicts/: 3en_ext_yd.dict.yaml
meta/: 8105.pinyin_with_tone_set.py.dict.yaml  8105.pinyin_without_tone.py.dict.yaml  8105.yaml  pinyin_simp.py.dict.yaml  wubi86wm.yaml  wubi86wm_18030.wb.dict.yaml
products/: 8105.pinyin_with_tone.yaml  8105.pinyin_without_tone_set.yaml
scripts/: app.x.py  check_word_in_8105.py  header.py  melt_eng.py  pinyin_8105.py  pinyin_with_tone.py  pinyin_with_tone_set.py  pinyin_without_tone.py  pinyin_without_tone_set.py  py2wb.py  py2wx.py  wubi.py  wubi86.py  wubi86_js6.py  wubi86_wm.py  wubi86_yellow_dog.py  wx2custom.py  wx2custom_8105.py
src/: 41448.dict.yaml  8105.dict.yaml  8105.pinyin.yaml  chess.dict.yaml  chess2.dict.yaml  composite.dict.yaml  exthot.dict.yaml  food.dict.yaml  game.dict.yaml  geography.dict.yaml  history.dict.yaml  idiom.dict.yaml  literature.dict.yaml  medication.dict.yaml  name.dict.yaml  name2.dict.yaml  others.dict.yaml  place.dict.yaml  shulihua.dict.yaml  sport.dict.yaml  (+4 more)
(+89 files in other folders)
