[project]
name = "rime-utils"
version = "0.1.0"
description = "Some rime utils"
authors = [
    {name = "Jack Liu",email = "loveminimal@163.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
